# newsolvr

./: .gitignore  DEPLOY.md  README.md  TODO.md  api_utils.py  apitest.py  app.py  db_setup.sql  db_utils.py  llm_instructions.txt  llm_utils.py  main.py  news.py  news_api_utils.py  newsapi_utils.py  newsolvr.py  pipeline.py  pyproject.toml  wsgi.py
app/: __init__.py
app/static/: style.css
app/templates/: index.html
config/: .env.example  config.py
database/: __init__.py  db_setup.sql  db_utils.py
pipeline/: __main__.py  run.py
pipeline/prompts/: problem_analyzer.md
pipeline/scripts/: __init__.py  guardian_api.py  llm_functions.py  timeliness_functions.py  times_api.py
pipeline/utils/: __init__.py  llm_utils.py  news_api_utils.py  pipeline_dataclasses.py  timeliness_utils.py
prompts/: problem_analyzer.md  problem_ranking_parameters.md
static/: style.css
templates/: index.html
utils/: db_utils.py  guardian_api_utils.py  llm_utils.py  news_api_utils.py  pipeline_dataclasses.py  pipeline_error_handling.py  times_api_utils.py
